Spacing fixes

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ body {
     align-items: center;
 }
 /* Mobile UI */
-@media only screen and (max-width: 81.25rem) {
+@media only screen and (max-width: 89.99rem) {
     .container {
         padding: 0 1rem;
     }
@@ -68,7 +68,7 @@ body {
     box-shadow: 0 .125rem .25rem rgba(0, 0, 0, 0.1);
 }
 /* Mobile UI */
-@media only screen and (max-width: 81.25rem) {
+@media only screen and (max-width: 89.99rem) { 
     .header {
         padding: .5rem;
     }
@@ -158,7 +158,7 @@ main {
      width: 100%;
   }
 /* Mobile UI */
-@media only screen and (max-width: 81.25rem) {
+@media only screen and (max-width: 89.99rem) {
     .primary-button.wide {
         min-width: 15rem;
         width: 15rem;
@@ -256,7 +256,7 @@ main {
     gap: 2rem;
 }
 /* Mobile UI */
-@media only screen and (max-width: 81.25rem) { 
+@media only screen and (max-width: 89.99rem) { 
     .nav-menu-cnt {
         position: absolute;
         padding-left: 1rem;
@@ -434,7 +434,7 @@ main {
     margin-top: 2rem;
 }
 /* Mobile UI */
-@media only screen and (max-width: 81.25rem) {
+@media only screen and (max-width: 89.99rem) {
     .hero {
         padding: 8rem 0 2rem;
     }
@@ -611,7 +611,7 @@ main {
     margin-top: 1rem;
 }
 /* Mobile UI */
-@media only screen and (max-width: 81.25rem) {
+@media only screen and (max-width: 89.99rem) {
     .about h2 {
         font-size: 1.75rem;
         font-style: normal;
@@ -709,7 +709,7 @@ main {
     color: var(--Color-Primary-Primary-300);
 }
 /* Mobile UI */
-@media only screen and (max-width: 81.25rem) {
+@media only screen and (max-width: 89.99rem) {
     .slogan {
         text-transform: uppercase;
         margin-top: 4rem;
@@ -763,6 +763,7 @@ main {
 }
 .features > .container > div:first-child > img {
     width: 60%;
+    max-width: 18.75rem;
 }
 .features > .container > div:last-child {
     width: 50%;
@@ -813,7 +814,7 @@ main {
     margin: .3rem 0 0 0;
 }
 /* Mobile UI */
-@media only screen and (max-width: 81.25rem) {
+@media only screen and (max-width: 89.99rem) {
     .features .container {
         flex-direction: column;
         padding: 2rem 0;
@@ -903,7 +904,7 @@ main {
     line-height: 2rem;
 }
 /* Mobile UI */
-@media only screen and (max-width: 81.25rem) {
+@media only screen and (max-width: 89.99rem) {
     .features_with_screenshot .container {
         flex-direction: column;
     }
@@ -1022,7 +1023,7 @@ main {
     margin: .3rem 0 0 0;
 }
 /* Mobile UI */
-@media only screen and (max-width: 81.25rem) {
+@media only screen and (max-width: 89.99rem) {
     .paymemnt-plans > .container > .paymemnt-plans-cnt {
         padding: .5rem;
         margin-top: 1rem;
@@ -1131,7 +1132,7 @@ main {
         padding: 2rem;
     }
 }
-@media only screen and (max-width: 81.25rem) {
+@media only screen and (max-width: 89.99rem) {
     .paymemnt-plans-compare > .container > .paymemnt-plans-compare-cnt {
         padding: .5rem;
         margin-top: 1rem;
@@ -1181,7 +1182,7 @@ main {
 }
 .image > .container > img {
     width: 100%;
-    padding: 1rem;
+    padding: 1rem 0;
 }
 .image > .container > h3 {
     color: #652815;
@@ -1204,7 +1205,10 @@ main {
     padding: 1rem;
 }
 /* Mobile UI */
-@media only screen and (max-width: 81.25rem) {
+@media only screen and (max-width: 89.99rem) {
+    .image > .container > img {
+        padding: 1rem;
+    }
     .image > .container > h3 {
         font-size: 1.75rem;
         font-style: normal;
@@ -1231,10 +1235,11 @@ main {
     align-content: center;
     margin: auto;
     border-radius: 2.5rem;
+    justify-content: space-between;
 }
 .image-two-columns-with-text > .container > img {
-    width: calc(50% - 2rem);
-    margin: 1rem;
+    width: 50%;
+    margin: 1rem 0;
 }
 .image-two-columns-with-text > .container > div {
     width: calc(50% - 2rem);
@@ -1264,7 +1269,7 @@ main {
 }
 
 /* Mobile UI */
-@media only screen and (max-width: 81.25rem) {
+@media only screen and (max-width: 89.99rem) {
     .image-two-columns-with-texts > .container {
         flex-direction: row;
         border-radius: .75rem;
@@ -1327,7 +1332,7 @@ main {
 }
 
 /* Mobile UI */
-@media only screen and (max-width: 81.25rem) {
+@media only screen and (max-width: 89.99rem) {
     .image-two-columns > .container {
         flex-direction: column;
         border-radius: .75rem;
@@ -1459,7 +1464,7 @@ main {
     text-align: left;
 }
 /* Mobile UI */
-@media only screen and (max-width: 81.25rem) {
+@media only screen and (max-width: 89.99rem) {
     .faqs > .container > img {
         margin-inline: -1rem;
     }
@@ -1557,7 +1562,7 @@ main {
     text-align: left;
 }
 /* Mobile UI */
-@media only screen and (max-width: 81.25rem) {
+@media only screen and (max-width: 89.99rem) {
     .payments {
         margin-top: 4rem;
     }
@@ -1678,7 +1683,7 @@ main {
     resize: vertical;
 }
 /* Mobile UI */
-@media only screen and (max-width: 81.25rem) {
+@media only screen and (max-width: 89.99rem) {
     .contact {    
         padding-top: 4rem;
     }
